修正了Game模块中一些文件的命名

--- a/MDK-ARM/AircraftWar-OLED-BT-DataPacket.uvprojx
+++ b/MDK-ARM/AircraftWar-OLED-BT-DataPacket.uvprojx
@@ -545,9 +545,9 @@
               <FilePath>..\Middlewares\Game\AircraftWar.c</FilePath>
             </File>
             <File>
-              <FileName>AW_Background.c</FileName>
+              <FileName>AW_Player.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\Middlewares\Game\AW_Background.c</FilePath>
+              <FilePath>..\Middlewares\Game\AW_Player.c</FilePath>
             </File>
           </Files>
         </Group>
