准备用单例设计游戏成员

--- a/MDK-ARM/AircraftWar-OLED-BT-DataPacket.uvprojx
+++ b/MDK-ARM/AircraftWar-OLED-BT-DataPacket.uvprojx
@@ -545,6 +545,11 @@
               <FilePath>..\Middlewares\Game\AircraftWar.c</FilePath>
             </File>
             <File>
+              <FileName>AW_Bullet.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Middlewares\Game\AW_Bullet.c</FilePath>
+            </File>
+            <File>
               <FileName>AW_Player.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Middlewares\Game\AW_Player.c</FilePath>
