--- a/MDK-ARM/AircraftWar-OLED-BT-DataPacket.uvprojx
+++ b/MDK-ARM/AircraftWar-OLED-BT-DataPacket.uvprojx
@@ -340,7 +340,7 @@
               <MiscControls></MiscControls>
               <Define>USE_HAL_DRIVER</Define>
               <Undefine></Undefine>
-              <IncludePath>..\Drivers\CMSIS;..\Drivers\STM32G0xx_HAL_Driver\Inc;..\Drivers\System\sys;..\Drivers\System\delay;..\Drivers\System\usart;..\User;..\Drivers\BSP\LED;..\Drivers\BSP\BT;..\Drivers\BSP\OLED;..\Middlewares\Game</IncludePath>
+              <IncludePath>..\Drivers\CMSIS;..\Drivers\STM32G0xx_HAL_Driver\Inc;..\Drivers\System\sys;..\Drivers\System\delay;..\Drivers\System\usart;..\Drivers\Core\tim;..\User;..\Drivers\BSP\LED;..\Drivers\BSP\BT;..\Drivers\BSP\OLED;..\Middlewares\Game</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -480,9 +480,24 @@
               <FilePath>..\Drivers\STM32G0xx_HAL_Driver\Src\stm32g0xx_hal_usart_ex.c</FilePath>
             </File>
             <File>
+              <FileName>stm32g0xx_hal_tim.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Drivers\STM32G0xx_HAL_Driver\Src\stm32g0xx_hal_tim.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32g0xx_hal_tim_ex.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Drivers\STM32G0xx_HAL_Driver\Src\stm32g0xx_hal_tim_ex.c</FilePath>
+            </File>
+            <File>
               <FileName>stm32g0xx_hal_dma.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Drivers\STM32G0xx_HAL_Driver\Src\stm32g0xx_hal_dma.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32g0xx_hal_dma_ex.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Drivers\STM32G0xx_HAL_Driver\Src\stm32g0xx_hal_dma_ex.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -503,6 +518,16 @@
               <FileName>usart.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Drivers\System\usart\usart.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>Drivers/Core</GroupName>
+          <Files>
+            <File>
+              <FileName>tim.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Drivers\Core\tim\tim.c</FilePath>
             </File>
           </Files>
         </Group>
